# Mediapipe_Projects

./: HandPainter.py  README.md  main.py  pyproject.toml
Plotting/: 2D-Plot.py  3D-plot.py
