[tool.poetry]
name = "Mediapipe_Projects"
version = "0.1.0"
description = ""
authors = ["Timnirmal <timnirmal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"
mediapipe = "^0.8.9"
PyAutoGUI = "^0.9.53"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
